...
                        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

              </com.google.android.material.appbar.AppBarLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="?attr/actionBarSize"
                app:layout_anchorGravity="center">


                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:backgroundTint="@color/cardview_light_background"
                    android:clickable="true"
                    android:focusable="true"
...
