...
            android:background="@android:drawable/presence_audio_busy" />

        <TextView
            android:id="@+id/audioText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Your audio"
            android:textAlignment="center"
            android:textSize="27dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_marginStart="16dp"
...
